--- a/ProxiJob/app/src/main/res/layout/activity_main.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         design:menu="@menu/nav_item" />
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="proxyjob.proxijob.MapsActivity" />
 </LinearLayout>
