--- a/ProxiJob/app/src/main/res/layout/activity_map_informations_details.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_map_informations_details.xml
@@ -36,6 +36,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
+    <TextView
+        android:id="@+id/address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
     <Button
         android:id="@+id/postule"
