--- a/ProxiJob/app/src/main/res/layout/activity_subscribe_demandeur.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_subscribe_demandeur.xml
@@ -45,6 +45,8 @@
             android:background="@null"
             android:maxLines="1"
             android:singleLine="true"
+            android:textColorHint="@color/colorWhite"
+
             android:backgroundTint="@color/colorWhite"/>
         <EditText
             android:layout_below="@+id/lastname"
@@ -53,6 +55,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@null"
+            android:textColorHint="@color/colorWhite"
+
             android:hint="Prénom"
             android:maxLines="1"
             android:singleLine="true"
@@ -65,6 +69,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@null"
+            android:textColorHint="@color/colorWhite"
+
             android:hint="Date de naissance"
             android:clickable="true"
             android:editable="false"
@@ -79,6 +85,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
+            android:textColorHint="@color/colorWhite"
+
             android:background="@null"
             android:maxLines="1"
             android:singleLine="true"
@@ -90,6 +98,8 @@
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColorHint="@color/colorWhite"
+
             android:hint="Mot de passe"
             android:background="@null"
             android:layout_margin="10dp"
@@ -114,6 +124,8 @@
                 android:layout_marginRight="44dp"
                 android:layout_toLeftOf="@+id/femme"
                 android:layout_toStartOf="@+id/femme"
+                android:buttonTint="@color/colorWhite"
+                android:textColor="@color/colorWhite"
                 android:text="Homme" />
 
             <CheckBox
@@ -125,6 +137,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginEnd="62dp"
                 android:layout_marginRight="62dp"
+                android:buttonTint="@color/colorWhite"
+                android:textColor="@color/colorWhite"
                 android:text="Femme" />
 
             <Button
