--- a/ProxiJob/app/src/main/res/layout/custom_infowindow.xml
+++ b/ProxiJob/app/src/main/res/layout/custom_infowindow.xml
@@ -10,86 +10,97 @@
     android:paddingRight="20dip"
     android:paddingBottom="25dip">
 
-    <ImageView
-        android:id="@+id/clientPic"
-        android:layout_width="60dip"
-        android:layout_height="60dip"
-        android:src="@drawable/proxijob"
-        android:layout_marginLeft="8dip"
-        android:layout_gravity="center_vertical"/>
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginLeft="2dip"
         android:layout_gravity="center_vertical">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/clientPic"
+            android:layout_width="80dip"
+            android:layout_height="80dip"
+            android:src="@drawable/proxijob"
+            android:layout_marginLeft="4dip"
+            android:layout_gravity="center_vertical"/>
+
+        <TextView
+            android:layout_below="@+id/clientPic"
+            android:id="@+id/companyName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-
-            <ImageView
-                android:layout_width="25dip"
-                android:layout_height="25dip"
-                android:layout_marginLeft="5dip"
-                android:background="@drawable/ic_media_play_light"/>
-            <TextView
-                android:id="@+id/companyName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Chez Lucette"
-                android:textSize="10dip"
-                android:gravity="center_vertical"
-                android:textColor="#000000"/>
-
-        </LinearLayout>
-
-        <LinearLayout
+            android:text="Chez Lucette"
+            android:textSize="12dip"
+            android:layout_marginLeft="4dip"
+            android:gravity="center_vertical"
+            android:textColor="#000000"
+            android:textStyle="bold"/>
+        <TextView
+            android:layout_below="@+id/companyName"
+            android:id="@+id/address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:layout_marginLeft="4dip"
+            android:text="11 rue de la thé"
+            android:textSize="10dip"
+            android:gravity="center_vertical"
+            android:textColor="#000000"/>
+    </RelativeLayout>
 
-            <ImageView
-                android:layout_width="25dip"
-                android:layout_height="25dip"
-                android:layout_marginLeft="5dip"
-                android:background="@drawable/ic_audiotrack_light"/>
-            <TextView
-                android:id="@+id/job"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Serveur"
-                android:textSize="10dip"
-                android:gravity="center_vertical"
-                android:textColor="#000000"/>
 
-        </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="107dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dip"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/job"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:text="Plongeur"
+            android:textColor="#000000"
+            android:textSize="20dip"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:layout_width="25dip"
-                android:layout_height="25dip"
-                android:layout_marginLeft="5dip"
-                android:background="@drawable/ic_enhanced_encryption_black_24dp"/>
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center_vertical"
+            android:text="XX/XX/XX au XX/XX/XX"
+            android:textColor="#000000"
+            android:textSize="10dip" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center_vertical"
+            android:text="Description de la mission"
+            android:textColor="#000000"
+            android:textSize="12dip"
+            android:textStyle="bold" />
+
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
             <TextView
-                android:id="@+id/date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="android@gmail.com"
-                android:textSize="10dip"
+                android:id="@+id/desc"
+                android:layout_width="match_parent"
+                android:layout_height="33dp"
+                android:layout_marginTop="5dp"
                 android:gravity="center_vertical"
-                android:textColor="#000000"/>
+                android:text="..............."
+                android:textColor="#000000"
+                android:textSize="10dip" />
+        </ScrollView>
 
-        </LinearLayout>
 
     </LinearLayout>
 
