--- a/ProxiJob/app/src/main/res/layout/activity_missions_fragment.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_missions_fragment.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="wrap_content">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/info"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="COUCOU"
+        android:textColor="@color/proxi_button_purple"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textSize="30dp"/>
     <ListView
         android:id="@+id/list_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:layout_below="@+id/info"/>
+
+</RelativeLayout>
 </FrameLayout>
