--- a/ProxiJob/app/src/main/res/layout/custom_infowindow.xml
+++ b/ProxiJob/app/src/main/res/layout/custom_infowindow.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="300dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingTop="5dip"
     android:paddingLeft="10dip"
