--- a/ProxiJob/app/src/main/res/layout/custom_list_view_item_missions.xml
+++ b/ProxiJob/app/src/main/res/layout/custom_list_view_item_missions.xml
@@ -24,16 +24,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Name"
+            android:textSize="15dp"
             android:textStyle="bold"
             />
 
         <TextView
-            android:id="@+id/txtComment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="comment" />
-        <TextView
-            android:id="@+id/status_text"
+            android:id="@+id/job"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="status" />
