--- a/ProxiJob/app/src/main/res/menu/ch_em.xml
+++ b/ProxiJob/app/src/main/res/menu/ch_em.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <group android:id="@+id/grp1">
         <item
             android:id="@+id/menu_home"
-            android:title="Contact"
-            android:icon="@drawable/ic_account_circle_black_24dp"
+            android:title=""
+            android:icon="@drawable/message"
+            app:showAsAction="ifRoom"
+            android:color="@color/proxi_button_purple"
             />
+    </group>
+    <group android:id="@+id/grp2">
         <item
             android:id="@+id/menu_1"
-            android:title="+ Mission"
-            android:icon="@drawable/ic_account_circle_black_24dp"
-            />
+            android:title=""
+            android:icon="@drawable/map"
+            app:showAsAction="ifRoom"
+            android:color="@color/proxi_button_purple"
 
+            />
+    </group>
+    <group android:id="@+id/grp3">
         <item
             android:id="@+id/menu_2"
-            android:title="Profil"
-            android:icon="@drawable/ic_account_circle_black_24dp" />
-    </menu>
+            android:title=""
+            android:icon="@drawable/profil"
+            app:showAsAction="ifRoom"
+            android:color="@color/colorAccent"
+            />
+    </group>
+</menu>
