--- a/ProxiJob/app/src/main/res/layout/activity_map_informations_details.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_map_informations_details.xml
@@ -6,44 +6,115 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <TextView
+        android:id="@+id/company_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textColor="@color/proxi_button_purple"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:text="TextView"/>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:layout_marginTop="10dp">
+    <ImageView
+        android:id="@+id/company_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="30dp"
+        android:src="@drawable/background"/>
+    </RelativeLayout>
 
-    <TextView
-        android:id="@+id/lieu"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
-
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp">
     <TextView
-        android:id="@+id/job"
-        android:layout_width="match_parent"
+        android:id="@+id/job_startTW"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
-
+        android:text="Début" />
     <TextView
-        android:id="@+id/secteur"
-        android:layout_width="match_parent"
+        android:id="@+id/job_start"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/price"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_below="@id/job_startTW"
+        android:layout_marginTop="10dp"
         android:text="TextView" />
     <TextView
-        android:id="@+id/address"
+        android:id="@+id/job_endTW"
+        android:layout_toRightOf="@id/job_startTW"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="120dp"
+        android:text="Fin" />
+    <TextView
+        android:id="@+id/job_end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/job_endTW"
+        android:layout_alignLeft="@+id/job_endTW"
+        android:layout_marginTop="10dp"
+        android:text="TextView" />
+    <TextView
+        android:id="@+id/job_titleTW"
+        android:layout_below="@id/job_start"
+        android:layout_alignLeft="@+id/company_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Job" />
+    <TextView
+        android:id="@+id/job_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/job_titleTW"
+        android:layout_alignLeft="@+id/company_image"
+        android:layout_marginTop="10dp"
+        android:text="TextView" />
+    <TextView
+        android:id="@+id/job_cashTW"
+        android:layout_toRightOf="@id/job_startTW"
+        android:layout_below="@id/job_end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="120dp"
+        android:text="Rémunération" />
+    <TextView
+        android:id="@+id/job_cash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/job_cashTW"
+        android:layout_alignLeft="@+id/job_cashTW"
+        android:layout_marginTop="10dp"
+        android:text="TextView" />
+    <TextView
+        android:id="@+id/job_detailTW"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/company_image"
+        android:layout_below="@id/job_title"
+        android:layout_marginTop="10dp"
+        android:text="Descriptif" />
+    <TextView
+        android:id="@+id/job_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/company_image"
+        android:layout_below="@id/job_detailTW"
+        android:layout_marginTop="10dp"
         android:text="TextView" />
+    </RelativeLayout>
 
     <Button
-        android:id="@+id/postule"
+        android:id="@+id/post"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Button" />
