--- a/ProxiJob/app/src/main/res/layout/activity_profil.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_profil.xml
@@ -1,11 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/logOut"
-        android:text="Se déconnecter"/>
-</LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:id="@+id/informations"
+        android:src="@drawable/infos"
+        android:background="@color/proxi_button_green"
+        android:text="Mes informations"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:id="@+id/cv"
+        android:background="@color/proxi_button_purple"
+        android:src="@drawable/cv"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/informations"
+        android:text="Mon C.V."/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_below="@id/cv"
+        android:layout_marginTop="10dp"
+        android:background="@color/proxi_button_purple"
+        android:src="@drawable/reco"
+        android:id="@+id/recommandations"
+        android:text="Mes recommandations"/>
+</RelativeLayout>
