--- a/ProxiJob/app/src/main/res/layout/activity_missions_fragment.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_missions_fragment.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/info"/>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
@@ -38,6 +38,7 @@
             android:layout_margin="16dp"
             android:layout_weight="1"
             android:clickable="true"
+            android:foregroundGravity="center"
             android:src="@drawable/plus"
             app:backgroundTint="@color/proxi_button_purple"
             app:rippleColor="@color/proxi_button_purple" />
@@ -48,10 +49,9 @@
             android:layout_height="wrap_content"
             android:text="Vous n'avez pas encore postulé \n à une offre"
             android:textAlignment="center"
+            android:layout_gravity="center"
             android:textColor="@color/proxi_button_purple"
             android:textSize="20dp" />
-
     </LinearLayout>
-
 </RelativeLayout>
 </FrameLayout>
