--- a/ProxiJob/app/src/main/res/layout/activity_profil.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_profil.xml
@@ -1,31 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:id="@+id/informations"
         android:src="@drawable/infos"
         android:background="@color/proxi_button_green"
-        android:text="Mes informations"/>
+        android:text="Mes informations"
+        android:textColor="@color/colorWhite"
+        android:drawableTop="@drawable/my_informations2"
+        android:textAllCaps="false"
+        android:textSize="20sp"/>
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="30dp"
+
+        android:paddingBottom="30dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
         android:id="@+id/cv"
         android:background="@color/proxi_button_purple"
         android:src="@drawable/cv"
-        android:layout_marginTop="10dp"
         android:layout_below="@id/informations"
-        android:text="Mon C.V."/>
+        android:text="Mon C.V."
+        android:drawableTop="@drawable/my_cv2"
+        android:textAllCaps="false"
+        android:textAlignment="gravity"
+        android:textColor="@color/colorWhite"
+        android:textSize="20sp"/>
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="30dp"
+        android:paddingTop="30dp"
+
         android:layout_below="@id/cv"
-        android:layout_marginTop="10dp"
-        android:background="@color/proxi_button_purple"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@color/proxi_purple_light"
         android:src="@drawable/reco"
         android:id="@+id/recommandations"
-        android:text="Mes recommandations"/>
-</RelativeLayout>
+        android:text="Mes recommandations"
+        android:textColor="@color/colorWhite"
+        android:drawableTop="@drawable/my_recommendation"
+        android:textAllCaps="false"
+        android:textSize="20sp"/>
+    </LinearLayout>
+</LinearLayout>
