--- a/ProxiJob/app/src/main/res/layout/activity_login.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background"
     android:orientation="vertical"
     android:paddingBottom="16dp"
@@ -22,41 +23,49 @@
             android:src="@drawable/logo_proxijob" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    <EditText
-        android:id="@+id/ident"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@null"
-        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
-        android:drawablePadding="5dp"
-        android:hint="Identifiant"
-        android:inputType="textEmailAddress"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:textColorHint="@color/colorWhite"
-        android:textColor="@color/colorWhite"
-        android:textSize="20sp"
-        android:backgroundTint="@color/colorWhite"/>
-
-
-    <EditText
-        android:layout_below="@+id/ident"
-        android:id="@+id/pass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@null"
-        android:drawableLeft="@drawable/ic_enhanced_encryption_black_24dp"
-        android:drawablePadding="5dp"
-        android:hint="Mot de passe"
-        android:inputType="textPersonName"
-        android:textColor="@color/colorWhite"
-        android:textColorHint="@color/colorWhite"
-        android:textSize="20sp"
-        android:backgroundTint="@color/colorWhite"/>
-    </RelativeLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="@color/white">
+            <EditText
+                android:id="@+id/ident"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:hint="Identifiant"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:layout_marginLeft="10dp"
+                android:singleLine="true"
+                android:textColorHint="@color/colorWhite"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp"
+                android:backgroundTint="@color/colorWhite" />
+        </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="@color/white"
+            app:passwordToggleEnabled="true">
+            <EditText
+                android:id="@+id/pass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="27dp"
+                android:layout_marginLeft="10dp"
+                android:background="@null"
+                android:backgroundTint="@color/colorWhite"
+                android:drawableLeft="@drawable/ic_enhanced_encryption_black_24dp"
+                android:drawablePadding="5dp"
+                android:hint="Mot de passe"
+                android:inputType="textPassword"
+                android:textColor="@color/colorWhite"
+                android:textColorHint="@color/colorWhite"
+                android:textSize="20sp" />
+        </android.support.design.widget.TextInputLayout>
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -72,6 +81,7 @@
         android:layout_gravity="center"
         android:background="@color/proxi_button_green"
         android:text="Se connecter"
+        android:textAllCaps="false"
         android:textColor="@color/proxi_back"
         android:textSize="12sp" />
 
@@ -80,9 +90,11 @@
         android:id="@+id/signup_button"
         android:layout_width="196dp"
         android:layout_height="52dp"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:background="@color/proxi_button_purple"
         android:text="S'inscrire"
+        android:textAllCaps="false"
         android:textColor="@color/proxi_button_green"
         android:textSize="12sp" />
     </RelativeLayout>
