--- a/ProxiJob/app/src/main/res/layout/activity_missions_fragment.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_missions_fragment.xml
@@ -19,12 +19,18 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="30dp"/>
+    <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/main_swipe"
+        android:layout_below="@+id/info">
+
     <com.baoyz.swipemenulistview.SwipeMenuListView
         android:id="@+id/listView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/info"/>
-
+        />
+    </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
