--- a/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
+++ b/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
@@ -75,12 +75,13 @@
         android:text="DESCRIPTION"/>
     <EditText
         android:id="@+id/description"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:layout_below="@id/descriptionT"
         android:textColor="@color/proxi_button_purple"
         android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
         android:inputType="text"
         android:text="TextView"/>
     <TextView
@@ -91,6 +92,7 @@
         android:layout_below="@id/description"
         android:textColor="@color/proxi_button_purple"
         android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
         android:textSize="20sp"
         android:text="N°SIRET"/>
     <EditText
@@ -101,6 +103,7 @@
         android:layout_below="@id/nb_siretT"
         android:textColor="@color/proxi_button_purple"
         android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
         android:inputType="number"
         android:text="TextView"/>
     <TextView
@@ -112,6 +115,7 @@
         android:layout_below="@id/description"
         android:textColor="@color/proxi_button_purple"
         android:layout_marginLeft="80dp"
+
         android:textSize="20sp"
         android:text="N°Telephone"/>
     <EditText
@@ -121,6 +125,7 @@
         android:layout_below="@id/nb_telephoneT"
         android:layout_alignLeft="@id/nb_telephoneT"
         android:textColor="@color/proxi_button_purple"
+        android:layout_marginRight="20dp"
         android:inputType="number"
         android:text="TextView"/>
     <TextView
@@ -140,6 +145,7 @@
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:layout_marginLeft="40dp"
+        android:layout_marginRight="20dp"
         android:layout_below="@id/emailT"
         android:inputType="textEmailAddress"
         android:text="TextView"/>
@@ -162,6 +168,7 @@
         android:textColor="@color/proxi_button_purple"
         android:layout_below="@id/adresseT"
         android:layout_alignLeft="@id/adresseT"
+        android:layout_marginRight="20dp"
         android:text="TextView"/>
     </RelativeLayout>
     <android.support.design.widget.FloatingActionButton
@@ -175,6 +182,7 @@
         android:text="Button"
         android:textAllCaps="true"
         android:textSize="15dp"
+        android:src="@drawable/plus"
         android:background="@color/proxi_button_purple"
         android:textColor="@color/colorWhite"/>
 </LinearLayout>
